@@ -9,6 +9,8 @@ netcfg (1.50) UNRELEASED; urgency=low
   * Disable by default wireless on non-linux architectures.
   * Inverse the logic about building without wireless support (WIRELESS=0).
   * Substitute Linux-specific code in get_all_ifs() using getifaddrs().
+  * /var/run/stab is Linux PCMCIA specific; don't use it on non-Linux
+    architectures.
 
   [ Colin Watson ]
   * check_kill_switch is Linux-specific; provide a stub implementation for
